deployment/fr-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-responder
  labels:
    app: first-responder
  namespace: first-responder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-responder
  template:
    metadata:
      labels:
        app: first-responder
    spec:
      serviceAccountName: first-responder
      serviceAccount: first-responder
      containers:
        - name: first-responder-agent
          image: k3s-registry.apps.k3s-dom.local/first-responder:latest  # Replace with your actual registry/tag
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
