deployment/fr-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-responder-service
  namespace: first-responder
spec:
  selector:
    app: first-responder
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
